# buildable-stick-system

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  TODO.md  build.py  pyproject.toml  tox.ini
attic/: README.md
demo/: all-together-demo-extended-with-windows.scad  all-together-demo-extended.scad  all-together-demo-solo.scad  all-together-demo.scad  blown-up-demo.scad
docs/: README-objects.md  assembly-and-tips.md  materials.md  printing-and-materials.md
requirements/: requirements-dev-and-gui.txt  requirements-dev.txt  requirements-gui.txt  requirements.txt
src/: blown-up-demo.scad  bottom-panel-concave.scad  bottom-panel-inset.scad  bottom-panel-left.scad  bottom-panel-middle.scad  bottom-panel-overhang-left.scad  bottom-panel-overhang-middle.scad  bottom-panel-overhang-right.scad  bottom-panel-overhang-solo.scad  bottom-panel-right.scad  bottom-panel-solo-concave.scad  bottom-panel-solo.scad  bottom-panel.scad  components.scad  frame-left.scad  frame-middle.scad  frame-piece-bottom-left-or-right-extended.scad  frame-piece-bottom-left-or-right.scad  frame-piece-interconnect.scad  frame-piece-side-extended-to-bottom.scad  frame-piece-side-extended.scad  frame-piece-side-for-box.scad  frame-piece-side.scad  frame-piece-top-left-or-right.scad  frame-piece-top-left.scad  frame-piece-top-or-bottom-aux-and-neutrik.scad  frame-piece-top-or-bottom-extended.scad  frame-piece-top-or-bottom-for-box-aux-and-neutrik.scad  frame-piece-top-or-bottom-for-box.scad  frame-piece-top-or-bottom-for-extended-side-aux-and-neutrik.scad  (+72 more)
(+156 files in other folders)
